# pretty-claws

./: .gitattributes  .gitignore  CREDITS.md  Cargo.toml  README.md  REUSE.toml  rust-toolchain.toml
.github/pages-template/: index.html  manifest.json
.github/workflows/: pages-deploy.yml
fox-paws/: Cargo.toml
fox-paws/assets/: paw2.acorn
fox-paws/src/: main.rs
helper-bins/: Cargo.toml
pretty-claws/: Cargo.toml
pretty-claws/assets/: color_gradient.wgsl
pretty-claws/src/: animation.rs  main.rs
