# © 2025 <_@habnab.it>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "pretty-claws"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui_picking_backend",
    "bevy_ui",
    "bevy_window",
    "default_font",
    "dynamic_linking",
    "multi_threaded",
    "png",
    "wayland",
    "webgl2",
    "x11",
] }
bevy-inspector-egui = { version = "0.29.1", optional = true }
bevy_egui = { version = "~0.32.0", default-features = false, optional = true }
bevy_pkv = { version = "~0.12", default-features = false, features = ["bevy", "sled"] }
blake3 = { version = "~1.6.1", features = ["pure"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
petgraph = { version = "0.6", default-features = false }
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = "1.0.219"
uuid = { version = "~1.12.1", features = ["v4"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["CssStyleDeclaration", "Document", "Element", "HtmlElement", "console"] }

[features]
default = []
inspect = [
    "bevy-inspector-egui",
    "bevy_egui",
]
